# torch-points3d

./: pyproject.toml  setup.py
torch_points3d/core/base_conv/: message_passing.py
torch_points3d/core/data_transform/: grid_transform.py
torch_points3d/modules/pointnet2/: message_passing.py
