[project]
name = "torch_points3d"
version = "0.2.0"  # This will be overriden by the CI at publish time
description = "Point Cloud Deep Learning Extension Library for PyTorch"
authors = [
    {name = "Thomas Chaton", email = "thomas.chaton.ai@gmail.com"},
    {name = "Nicolas Chaulet", email = "nicolas.chaulet@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core ML dependencies
    "torch @ https://download.pytorch.org/whl/cu121/torch-2.2.0%2Bcu121-cp312-cp312-linux_x86_64.whl",
    "torch-scatter @ https://data.pyg.org/whl/torch-2.2.0%2Bcu121/torch_scatter-2.1.2%2Bpt22cu121-cp312-cp312-linux_x86_64.whl",
    "torch-sparse @ https://data.pyg.org/whl/torch-2.2.0%2Bcu121/torch_sparse-0.6.18%2Bpt22cu121-cp312-cp312-linux_x86_64.whl",
    "torch-cluster @ https://data.pyg.org/whl/torch-2.2.0%2Bcu121/torch_cluster-1.6.3%2Bpt22cu121-cp312-cp312-linux_x86_64.whl",
    "torch-geometric>=2.5.0",
    "torch-points-kernels>=0.7.0",
    "pytorch_metric_learning>=0.9.87",
    
    # Visualization and data processing
    "matplotlib>=3.1",
    # "open3d==0.12.0",
    "torchnet>=0.0.4",
    "scikit-image>=0.16.2",
    "numba>=0.50.0",
    "plyfile>=0.7.2",
    
    # ML frameworks and utilities
    "hydra-core>=1.0.0",
    "wandb>=0.8.18",
    "tqdm>=4.40",
    "tensorboard>=2.1",
    "gdown>=3.12.0",
    
    # Type hints and utilities
    "types-six>=0.1.6",
    "types-requests>=0.1.11",
    "laspy>=2.0.3",
    "numpy<1.20.0",
]

[project.optional-dependencies]
dev = [
    "pylint>=2.4",
    "autopep8>=1.4",
    "flake8>=3.7",
    "rope>=0.14.0",
    "pre-commit>=1.21.0",
    "black>=19.10b0",
    "jupyterlab>=1.2.6",
    "pyvista>=0.23.1",
    "panel>=0.8.0",
    "param>=1.9.3",
    "codecov>=2.0.16",
    "gpustat>=0.6.0",
    "snakeviz>=2.0.1",
    "sphinx_rtd_theme>=0.4.3",
    "sphinx>=2.4.4",
    "sphinx-autobuild>=0.7.1",
    "mypy>=0.770",
    "ipywidgets>=7.5.1",
]

[project.urls]
documentation = "https://torch-points3d.readthedocs.io/en/latest/"

[tool.setuptools]
packages = ["torch_points3d"]

[tool.black]
line-length = 120

[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "numpy>=1.20.0",
]
build-backend = "setuptools.build_meta"
